[gd_scene load_steps=10 format=3 uid="uid://c6cnfp6su7b32"]

[ext_resource type="Script" path="res://scripts/window_show.gd" id="1_fwkhw"]
[ext_resource type="Texture2D" uid="uid://ilp6x3sd5gm4" path="res://assets/sprites/dialog/npc对话框.png" id="3_6uctv"]
[ext_resource type="FontFile" uid="uid://drljns2yrs1tr" path="res://assets/fonts/PixelOperator8.ttf" id="4_dt0hf"]
[ext_resource type="FontFile" uid="uid://p8qv82vmker0" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_i6f6s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ivofr"]
atlas = ExtResource("3_6uctv")
region = Rect2(0, 0, 123, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp4gw"]
atlas = ExtResource("3_6uctv")
region = Rect2(123, 49, 123, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l7cc"]
atlas = ExtResource("3_6uctv")
region = Rect2(123, 0, 123, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_knmxc"]
atlas = ExtResource("3_6uctv")
region = Rect2(0, 49, 123, 49)

[sub_resource type="SpriteFrames" id="SpriteFrames_af8hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivofr")
}],
"loop": true,
"name": &"angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp4gw")
}],
"loop": true,
"name": &"fear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l7cc")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_knmxc")
}],
"loop": true,
"name": &"sad",
"speed": 5.0
}]

[node name="Dialog" type="CanvasLayer"]
script = ExtResource("1_fwkhw")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(1152, 896)
scale = Vector2(11.0675, 11.0675)
sprite_frames = SubResource("SpriteFrames_af8hk")
animation = &"sad"

[node name="NPCName" type="Label" parent="."]
offset_left = 624.0
offset_top = 768.0
offset_right = 686.0
offset_bottom = 791.0
scale = Vector2(2.48982, 2.48982)
theme_override_colors/font_color = Color(0.190762, 0.190762, 0.190762, 1)
theme_override_fonts/font = ExtResource("4_i6f6s")
text = "Lumi"

[node name="Answer1" type="RichTextLabel" parent="."]
offset_left = 552.0
offset_top = 952.0
offset_right = 1400.0
offset_bottom = 1045.0
theme_override_colors/default_color = Color(0.138638, 0.138637, 0.138637, 1)
theme_override_colors/font_selected_color = Color(0.701961, 0, 0, 1)
theme_override_constants/line_separation = 7
theme_override_fonts/normal_font = ExtResource("4_dt0hf")
theme_override_fonts/bold_italics_font = ExtResource("4_i6f6s")
theme_override_fonts/bold_font = ExtResource("4_i6f6s")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b][u]Test test testestestTest test testestest[/u][/b]
"
fit_content = true
scroll_active = false

[node name="Answer2" type="RichTextLabel" parent="."]
offset_left = 552.0
offset_top = 1031.0
offset_right = 1400.0
offset_bottom = 1124.0
theme_override_colors/default_color = Color(0.138638, 0.138637, 0.138637, 1)
theme_override_colors/font_selected_color = Color(0.701961, 0, 0, 1)
theme_override_constants/line_separation = 7
theme_override_fonts/normal_font = ExtResource("4_dt0hf")
theme_override_fonts/bold_italics_font = ExtResource("4_i6f6s")
theme_override_fonts/bold_font = ExtResource("4_i6f6s")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b][u]Test test testestest[/u][/b]"
fit_content = true
scroll_active = false

[node name="Question" type="Label" parent="."]
offset_left = 552.0
offset_top = 853.0
offset_right = 1480.0
offset_bottom = 955.0
theme_override_colors/font_color = Color(0.230315, 0.230315, 0.230315, 1)
theme_override_fonts/font = ExtResource("4_i6f6s")
theme_override_font_sizes/font_size = 32
text = "choos Aaaaaaaaaa aaaaaaa aaaa aaa aaaaa
"
autowrap_mode = 3

[node name="Label" type="Label" parent="."]
offset_left = 824.0
offset_top = 1096.0
offset_right = 1262.0
offset_bottom = 1119.0
theme_override_colors/font_color = Color(0.127736, 0.127736, 0.127736, 1)
theme_override_colors/font_shadow_color = Color(0.233925, 0.233925, 0.233925, 1)
theme_override_fonts/font = ExtResource("4_dt0hf")
text = "Use W/S to select, Space to confirm"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
